{
    "name": "MainAction",
    "maps": [
        {
            "name": "playerMovement",
            "id": "0d0c416b-b44e-4d1c-9072-a1ef86106200",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "38f2b29a-08d1-48fe-b845-9d6d10cd27a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "5e8f70cf-f6fe-4bde-8ad3-0359de87ae5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "a1991957-0ef5-452d-a0fa-6737bb0699d7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "44c6987c-5857-4da2-b16b-f6ef2f6f5701",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "92189552-afe0-422b-a74f-a5c3ca55711b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "02f96d10-d8c3-4ca0-8e26-dd26fa96e3fc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0a06a13d-79c0-4509-a156-46f22f0eaa4e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ace2a753-51ca-4efa-bd45-673cb3e36548",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "inputControl",
            "id": "f92ba987-bef4-4622-8402-58e643af7f05",
            "actions": [
                {
                    "name": "OnOffInput",
                    "type": "Button",
                    "id": "49a8429d-b80b-46f2-892e-0a4600a319e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "afab8aef-c053-4b97-87df-7571c9a84ed4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnOffInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8a61e9eb-0220-41f9-b1ea-7a3af61ec8cc",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnOffInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6cebdcb3-14c6-4fb0-84d6-c957ad7d1b49",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnOffInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "playerCombat",
            "id": "d04fcf04-639b-4c6a-b801-ca09182b47c9",
            "actions": [
                {
                    "name": "fire",
                    "type": "Button",
                    "id": "6d16affe-f86d-4c67-82dd-67246a1b85a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "87e4d164-1869-43d6-8604-35c8714d9ff2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}